----------------------------------------- 
Simple x264/x265 Launcher version history 
----------------------------------------- 

Version 2.86 [2018-02-26]
* Updated x264 to revision 2901 (API v155)
* Updated x265 to version 2.7+1
* Updated NVEncC to version 3.30
* x264 now uses combined 8-Bit/10-Bit binaries

Version 2.85 [2017-10-04]
* Updated x265 to version 2.5+22
* Updated build environment to Visual Studio 2017 with Update-3

Version 2.84 [2017-07-12]
* Updated x264 to revision 2851
* Updated x265 to version 2.5+2

Version 2.83 [2017-06-11]
* Updated x264 to revision 2833
* Updated x265 to version 2.4+36

Version 2.82 [2017-05-26]
* Updated x264 to revision 2829
* Updated x265 to version 2.4+22

Version 2.81 [2017-05-06]
* Updated x265 to version 2.4+6
* Updated NVEncC to version 3.07
* Save log files to the same directory as the output file

Version 2.80 [2017-04-01]
* Another attempt to fix application startup error "0xc0000005"
* Some tweaks to speed-up the update checker

Version 2.79 [2017-03-23]
* Updated x265 to version 2.3+22
* Fixed possible application startup error "0xc0000005"

Version 2.78 [2017-01-07]
* Updated x265 to version 2.2+22
* Updated Avs2YUV to version 0.24 (BugMaster's mod 5)
* Added new option to save pending jobs *without* confirmation
* Some fixes to parameter validation code

Version 2.77 [2016-12-13]
* Updated x265 to version 2.1+69
* Updated x264 to revision 2744
* Updated NVEncC to version 3.02

Version 2.76 [2016-10-21]
* Updated x265 to version 2.1+25
* Updated NVEncC to version 3.01
* Detection of "portable" VapourSynth (see README for details!)
* Detection of "portable" Avisynth (see README for details!)

Version 2.75 [2016-09-25]
* Updated build environment to Visual Studio 2015 with Update-3
* Updated x264 to revision 2721
* Updated x265 to version 2.0+54
* Updated NVEncC to version 2.11

Version 2.74 [2016-07-18]
* Updated x265 to version 2.0+2

Version 2.73 [2016-07-03]
* Updated x264 to revision 2705