@@ -26,7 +26,7 @@
 #define VER_X264_MAJOR 2
 #define VER_X264_MINOR 8
 #define VER_X264_PATCH 6
-#define VER_X264_BUILD 1120
+#define VER_X264_BUILD 1122
 
 #define VER_X264_PORTABLE_EDITION (0)
 
