@@ -6,6 +6,7 @@ Version 2.86 [2018-02-26]
 * Updated x264 to revision 2901 (API v155)
 * Updated x265 to version 2.7+1
 * Updated NVEncC to version 3.30
+* Moved "shut-down computer" from preferences to main menu
 * x264 now uses combined 8-Bit/10-Bit binaries
 
 Version 2.85 [2017-10-04]
